@@ -1,5 +1,9 @@
 2008-02-27  Satoshi Nakagawa <artension@gmail.com>
 
+	Added "identified" attribute in log view's html for CAPAB IDENTIFY-MSG support.
+
+2008-02-27  Satoshi Nakagawa <artension@gmail.com>
+
 	Added support for CAPAB IDENTIFY-MSG and CAPAB IDENTIFY-CTCP.
 
 ==== LimeChat 0.16.4 ====
